--- a/app/src/main/res/layout/vehicle_row.xml
+++ b/app/src/main/res/layout/vehicle_row.xml
@@ -8,19 +8,22 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="9dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="12dp">
+            >
 
             <TextView
                 android:id="@+id/textView40"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="35dp"
                 android:text="ID"
-                app:layout_constraintEnd_toStartOf="@+id/tv_add_vehicle_ID"
+                android:textColor="#090909"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,20 +31,19 @@
                 android:id="@+id/tv_add_vehicle_ID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="84dp"
+                android:layout_marginStart="116dp"
                 android:text="TextView"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView40"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/textView40" />
 
             <TextView
                 android:id="@+id/textView43"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="92dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:text="Name"
-                app:layout_constraintEnd_toStartOf="@+id/tv_add_vehicle_name"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView40" />
 
@@ -49,18 +51,19 @@
                 android:id="@+id/tv_add_vehicle_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="84dp"
+                android:layout_marginStart="124dp"
                 android:text="TextView"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView43"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/textView43" />
 
             <TextView
                 android:id="@+id/textView45"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="92dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:text="Year"
+                android:textColor="#050505"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView43" />
 
@@ -68,19 +71,19 @@
                 android:id="@+id/tv_add_vehicle_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="132dp"
                 android:text="TextView"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView45"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.539"
                 app:layout_constraintStart_toEndOf="@+id/textView45" />
 
             <TextView
                 android:id="@+id/textView47"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="92dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
                 android:text="Vehicle NO"
+                android:textColor="#090909"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView45" />
 
@@ -88,19 +91,19 @@
                 android:id="@+id/tv_add_vehicle_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="92dp"
                 android:text="TextView"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView47"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.507"
                 app:layout_constraintStart_toEndOf="@+id/textView47" />
 
             <TextView
                 android:id="@+id/textView49"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="96dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:text="Vehicle Details"
+                android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView47" />
 
@@ -108,19 +111,19 @@
                 android:id="@+id/tv_add_vehicle_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="68dp"
                 android:text="TextView"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView49"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.486"
                 app:layout_constraintStart_toEndOf="@+id/textView49" />
 
             <TextView
                 android:id="@+id/textView51"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="96dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
                 android:text="Insurence NO"
+                android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView49" />
 
@@ -128,18 +131,19 @@
                 android:id="@+id/tv_add_vehicle_insurenceNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="76dp"
                 android:text="TextView"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView51"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView51" />
 
             <TextView
                 android:id="@+id/textView53"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="92dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
                 android:text="Fuel Type"
+                android:textColor="#040404"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
@@ -147,10 +151,15 @@
                 android:id="@+id/tv_add_vehicle_fuel_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
                 android:text="TextView"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView53"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView53" />
+
+
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
